Restore style to fix text alignment

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -225,6 +225,7 @@ a {
   justify-content: center;
   min-height: 85vh;
   padding: 0 0 3rem;
+  text-align: center;
 
   .social-link {
     @media (min-width: $screen-md-min) {
